# tabula-8b-va-prediction

./: .env.example  .gitignore  CLAUDE.md  README.md  README_COLAB.md  TABULA_IMPLEMENTATION_PLAN.md  colab_notebook.ipynb  demo.py  download_model_mac.py  example_usage.py  pyproject.toml  requirements_colab.txt  setup.py  tabula_model.py  test_preprocessing.py
.claude/agents/: data-root-cause-analyst.md  ml-rootcause-expert.md  pipeline-authenticity-validator.md  ray-prefect-expert.md
.claude/agents/llm/: meditab-nyutron-expert.md  tabula-8b-finetuning-expert.md  tabula-rtfm-specialist.md  va-data-relationship-analyst.md
.claude/commands/: close-issue.md  execute-prp.md  generate-issue.md  generate-prp.md  new-task.md  next-tasks-one.md  next-tasks.md  workflow-pipeline-auto.md  workflow-pipeline-auto_v0.md  workflow-pipeline-single.md
data/: 20250609_gs34_vs_UC_CHAMPS_desc[92].r
data/raw/MITS/: CHAMPSICDMappings.csv  asr_138_decode_results_classification.csv  asr_307_ChildAbstractionCsum.csv  dst_57_ChildVA2012.csv  dst_57_PerinatalVA2012.csv
src/: __init__.py
src/data/: __init__.py  preprocessor.py  serializer.py  tabula_formatter.py
tests/: test_tabula_model.py
