[project]
name = "tabula-8b"
version = "0.1.0"
description = "Tabula-8B: Zero-shot tabular prediction model implementation"
authors = [
    {name = "Eric Liu"}
]
requires-python = "^3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "huggingface-hub>=0.19.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "python-dotenv>=1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
