[tool.poetry]
name = "tabula-8b"
version = "0.1.0"
description = "Tabula-8B: Zero-shot tabular prediction model implementation"
authors = ["Eric Liu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.0.0"
transformers = ">=4.35.0"
accelerate = ">=0.24.0"
datasets = ">=2.14.0"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
huggingface-hub = ">=0.19.0"
pydantic = ">=2.0.0"
tqdm = ">=4.65.0"
python-dotenv = ">=1.0.0"
pillow = ">=10.0.0"
# bitsandbytes = {version = ">=0.41.0", optional = true}  # Optional, not available on macOS

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
black = ">=23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"